# Anomaly-Detection-in-Microbiome

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_anomaly_exploration.ipynb
src/: main.py
src/data/: simulator.py
src/models/: detector.py
src/visualization/: plots.py
tests/: test_detector_plots.py  test_simulator.py
